# RAPTOR

./: .gitignore  .gitmodules  README.md
RAPTOR/: RAPTOR.ino  Skynet.h
flight data/kestrel/: 8-31_DATA_fixed.CSV  Flight3 Psuedocode.txt  RAPTOR_dataparser.py
flights/: CONOPS.xcf  Conops_Fix.xcf
flights/simulation/: generated-ouputs.txt  main.py  mapplot.py  pointgen.py  requirements.txt
hardware/: .gitignore
hardware/RAPTOR/: RAPTOR-cache.lib  RAPTOR-rescue.lib  RAPTOR.kicad_pcb  RAPTOR.net  RAPTOR.pro  RAPTOR.sch  RAPTOR.step  RAPTOR_bom.html  _saved_RAPTOR.sch  fp-lib-table  sym-lib-table
hardware/RAPTOR_footprints.pretty/: 22-23-2021.kicad_mod  2_Pin_Connector.kicad_mod  AdafruitGPS.kicad_mod  Arduino_Analog_06.kicad_mod  Arduino_x08_Digital.kicad_mod  Arduino_x10_Digital.kicad_mod  BMP280.kicad_mod  BNO055.kicad_mod  BirdLogo.kicad_mod  D24v50f5_Reg.kicad_mod  Jumper.kicad_mod  MOSFET.kicad_mod  Molex-2pin.kicad_mod  (+8 more)
live-plot/: live-plot.py
simulation/: environment.yml  generated-ouputs.txt  main.py  mapplot.py
simupy/: live-plot.py  simu.py  simufile.py  test.txt
software/: .gitignore  RAPTOR_UML.mdj
software/libraries/Skynet/: Activations.cpp  Activations.h  CMakeLists.txt  Connections.h  DataLoader.cpp  DataLoader.h  Functions.cpp  Functions.h  Layer.h  Neuron.cpp  Neuron.h  Skynet.cpp  Skynet.h
software/libraries/Skynet/data/: generatedOutputs.txt
software/libraries/Skynet/examples/SkynetExample/: SkynetTestingMain.cpp
software/libraries/Skynet/simulation/: generated-ouputs.txt  generatedOutputs.txt  main.py  mapplot.py  pointgen.py
(+335 files in other folders)
